@@ -98,3 +98,4 @@ Current
 	- API: Added is_tainted
 	- Modules: Made ChanServ modular with chanserv/main. All ChanServ modules will load this if it's not loaded as it is dependent on ChanServ.
           You should add chanserv/main to autoload before any ChanServ modules regardless.
+	- Chakora: updateTS is now a config option. WE HIGHLY ENCOURAGE ENABLING IT.
